--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^4.0.0
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
