--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_bloc: ^7.0.1
   provider: ^5.0.0
   image_picker: ^0.8.0
+  url_launcher: ^6.0.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
